src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Options__c</fullName>
        <label>Answer Options</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commentary_Question__c</fullName>
        <label>Commentary Question</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type_Question__c</fullName>
        <label>Type Question</label>
        <picklist>
            <picklistValues>
                <fullName>One from the list</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Question-{0000}</displayFormat>
        <label>Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>